# django-course

./: .gitignore  README.md  pyproject.toml
django_course/: settings.py  urls.py  views.py
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_banner.py
posts/templates/posts/: list.html  page.html  posts_list.html
static/css/: style.css
static/js/: main.js
templates/: about.html  layout.html
users/: urls.py  views.py
users/templates/users/: login.html  register.html
