[tool.poetry]
name = "django-course"
version = "0.1.0"
description = ""
authors = ["penglingwei <penglingwei@zju.edu.cn>"]
readme = "README.md"
packages = [{include = "django_course"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
